# etl

./: README.md  c3p-venv-reset.sh  crisp.yml  etl.code-workspace  initialize.sh  run-etl.sh  transformations.json
c3p-core/: .flake8  .gitignore  LICENSE  pyproject.toml
c3p-core/c3p_core/: __init__.py
c3p-core/c3p_core/service/: __init__.py  configuration.py  service.py  servicemanager.py
c3p-core/c3p_core/stream/: __init__.py  consumer.py  message.py  producer.py  stream.py  type.py
c3p-core/c3p_core/stream/schema/: __init__.py  baseschema.py  pickleschema.py
c3p-core/c3p_core/stream/stub/: __init__.py  consumer.py  message.py  producer.py  stream.py
c3p-core/tests/: streamstub_test.py  test.yml
c3p-etl/: .gitignore  LICENSE  pyproject.toml
c3p-etl/c3p_etl/: extracter.py  loader.py  transformer.py
c3p-etl/scripts/: create_customer_files.py  run_etl.py
c3p-etl/tests/: test.yml  test_transformer.py
c3p-model/: .flake8  LICENSE  README.md  pyproject.toml
c3p-model/c3p_model/: autoname_enum.py  order.py  weight_unit.py
