[tool.poetry]
name = "c3p-etl"
version = "0.1.0"
description = "Modules that extract, transform and load data"
authors = ["Matthieu Labour <matthieu.labour@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "~3.8"
c3p-core = { path = "../c3p-core", develop = true }
c3p-model = { path = "../c3p-model", develop = true }
aiofiles = "^22.1.0"
Unidecode = "^1.3.6"
watchfiles = "^0.19.0"
iteration-utilities = "^0.11.0"

[tool.poetry.dev-dependencies]
tox = "^3.21.4"
mypy = "^0.800"
pytest-cov = "^2.11.1"
pytest-runner = "^5.2"
pytest = "^6.2.2"
isort = "^5.7.0"
coverage = "^5.4"
bumpversion = "^0.6.0"
pre-commit = "^2.10.1"
flake8 = "^3.8.4"
black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
